[gd_scene load_steps=13 format=2]

[ext_resource path="res://main/ui/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://main/ui/menu/game_menu/creature_button_panel/point_bar/PointBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://main/ui/menu/game_menu/party_skill_container/skill_button_container/SkillButtonContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://main/ui/menu/creature_check_screen_menu/stat_bar_container/stat_bar/StatBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/battle/creature/orange/orange.png" type="Texture" id=5]
[ext_resource path="res://main/ui/theme/style_box/Clear.tres" type="StyleBox" id=6]
[ext_resource path="res://main/ui/menu/creature_check_screen_menu/creature_check_screen.gd" type="Script" id=7]
[ext_resource path="res://main/ui/theme/style_box/Misty.tres" type="StyleBox" id=8]
[ext_resource path="res://main/ui/theme/style_box/regular/margin/MarginRegular.tres" type="StyleBox" id=9]
[ext_resource path="res://main/ui/menu/creature_check_screen_menu/affinity_panel_container/AffinityContainer.tscn" type="PackedScene" id=10]
[ext_resource path="res://main/ui/menu/game_menu/party_skill_container/skill_button_container/skill_button_panel/SkillButtonPanel.tscn" type="PackedScene" id=11]
[ext_resource path="res://main/ui/menu/creature_check_screen_menu/stat_bar_container/stat_bar_container.gd" type="Script" id=12]

[node name="CreatureCheckScreen" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}
off_affinity = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2/VBoxContainer/OffenseAffinityContainer")
def_affinity = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2/VBoxContainer/DefenseAffinityContainer")
main_vbox = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2")
stat_bar_container = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer")
skill_button_container = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/CurrentSkillContainer/SkillButtonContainer")
exp_info_container = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ExpInfoContainer")
race_label = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/RaceLabel")
stat_label = NodePath("MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatLabel")

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 490.0
margin_bottom = 281.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 485.0
margin_bottom = 276.0
custom_styles/panel = ExtResource( 6 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 475.0
margin_bottom = 266.0
custom_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_right = 250.0
margin_bottom = 261.0
size_flags_horizontal = 0
custom_constants/separation = 7

[node name="ExpInfoContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 14.0
size_flags_vertical = 0
custom_constants/separation = 15

[node name="LevelLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ExpInfoContainer"]
margin_right = 48.0
margin_bottom = 14.0
text = "Level: 99"

[node name="ExpBar" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ExpInfoContainer" instance=ExtResource( 2 )]
margin_left = 63.0
margin_top = 0.0
margin_right = 149.0
margin_bottom = 14.0

[node name="NextLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/ExpInfoContainer"]
margin_left = 164.0
margin_right = 231.0
margin_bottom = 14.0
text = "Next: 999999"

[node name="RaceLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 250.0
margin_bottom = 35.0
text = "Race: Inanimate"

[node name="StatBarContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 250.0
margin_bottom = 127.0
rect_min_size = Vector2( 237, 0 )
size_flags_vertical = 0
custom_constants/separation = 0
script = ExtResource( 12 )
controller = NodePath("../../../../..")
button_scene = ExtResource( 4 )
neighbor_type = "vertical"

[node name="StatBar" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer" instance=ExtResource( 4 )]
margin_bottom = 17.0
stat = "stre"

[node name="StatBar2" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer" instance=ExtResource( 4 )]
margin_top = 17.0
margin_bottom = 34.0
stat = "magi"

[node name="StatBar3" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer" instance=ExtResource( 4 )]
margin_top = 34.0
margin_bottom = 51.0
stat = "vita"

[node name="StatBar4" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer" instance=ExtResource( 4 )]
margin_top = 51.0
margin_bottom = 68.0
stat = "agil"

[node name="StatBar5" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/StatBarContainer" instance=ExtResource( 4 )]
margin_top = 68.0
margin_bottom = 85.0
stat = "luck"

[node name="StatLabel" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 250.0
margin_bottom = 148.0
custom_colors/font_color = Color( 0.52549, 0.486275, 0.886275, 1 )
custom_colors/font_outline_modulate = Color( 0.309804, 0.341176, 0.776471, 1 )
text = "---"

[node name="SkillContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 250.0
margin_bottom = 261.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="CurrentSkillContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer"]
margin_right = 159.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )

[node name="SkillButtonContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/CurrentSkillContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 4.0
margin_right = 155.0
margin_bottom = 102.0
size_flags_vertical = 2
controller = NodePath("../../../../../../..")
neighbor_type = "horizontal"

[node name="SkillButtonPanel" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/CurrentSkillContainer/SkillButtonContainer" instance=ExtResource( 11 )]
margin_left = 0.0
margin_top = 84.0
margin_right = 151.0
margin_bottom = 98.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer"]
margin_left = 167.0
margin_right = 250.0
margin_bottom = 106.0
custom_constants/separation = 8

[node name="SkillDescriptionContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/VBoxContainer"]
margin_right = 83.0
margin_bottom = 22.0
custom_styles/panel = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/VBoxContainer/SkillDescriptionContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 79.0
margin_bottom = 18.0
text = "               "

[node name="NextSkillContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 83.0
margin_bottom = 106.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 9 )

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer/SkillContainer/VBoxContainer/NextSkillContainer"]
margin_left = 4.0
margin_top = 31.0
margin_right = 79.0
margin_bottom = 45.0

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer"]
margin_left = 258.0
margin_right = 470.0
margin_bottom = 261.0
size_flags_horizontal = 3

[node name="Sprite" type="TextureRect" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
margin_right = 212.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2"]
margin_top = 173.0
margin_right = 212.0
margin_bottom = 261.0
size_flags_vertical = 10
custom_constants/separation = 8

[node name="DefenseAffinityContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 0.0
margin_right = 212.0
margin_bottom = 40.0

[node name="OffenseAffinityContainer" parent="MarginContainer/PanelContainer/HBoxContainer/VBoxContainer2/VBoxContainer" instance=ExtResource( 10 )]
margin_top = 48.0
margin_right = 212.0
margin_bottom = 88.0
